amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-directive-arguments.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-directive-arguments.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
